...
        imageViews.append(ImageViewInfo(index: -1, view: nil, disposable: true))
        imageViews.append(ImageViewInfo(index: -1, view: nil, disposable: true))
        if files != nil {
            initScrollView()
        }
        scrollView.delegate = self
        self.view.accessibilityIdentifier = "imageScrollViewController"
        scrollView.accessibilityIdentifier = "scrollView"
        internalView.accessibilityIdentifier = "scrollViewContainer"
    }
    
    func setFiles(_ files:[FilesystemEntry], startIndex:Int) {
        self.files = files;
        currentIndex = startIndex
        if scrollView != nil {
...
