...
        super.viewDidLoad()
        let path = Bundle.main.resourcePath! + "/test"
        dataSource.setBasePath(path: path)
    }
    
    @IBAction func tapOnButton(_ sender:Any) {
        let firstFoldersTVC = createFoldersTableViewController(withFolderName: "", title:"Root folder")
        navigation = UINavigationController(rootViewController: firstFoldersTVC)
        navigation.modalPresentationStyle = .fullScreen
        present(navigation, animated: true, completion: nil)
    }
    
    private func createFoldersTableViewController(withFolderName folderName:String, title:String) -> FoldersTableViewController {
...
